# clib

socket/: CMakeLists.txt  client.c  server.c  socket.c  socket.h
socket/include/: socket.h
socket/src/: CMakeLists.txt  socket.c
socket/test/: CMakeLists.txt  client.c  server.c
